# openlabora

./: .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
test/: CMakeLists.txt
test/include/: ApplicationMock.hpp  GameWindowMock.hpp  IApplicationMock.hpp  RendererDependenciesMocks.hpp  RendererMock.hpp  ResourceManagerMock.hpp  TestApplication.hpp  TestRendererDependencies.hpp  TestStates.hpp
test/include/AppState/: TestAppStateDefs.hpp  TestStateIds.hpp  TestTransitions.hpp
test/include/ApplicationState/: TestStates.hpp
test/include/GameState/: ControllerMocks.hpp  GameControllerMock.hpp  ModelMock.hpp  ViewMocks.hpp
test/include/Misc/: Matchers.hpp
test/include/Resource/: IResourceManagerMock.hpp  ResourceManagerDefaultActionTestBase.hpp  ResourceManagerMock.hpp
test/src/: ApplicationTests.cpp  LocationTests.cpp  PlayfieldTests.cpp  RendererTests.cpp  StateMachineTests.cpp
test/src/ApplicationState/: ApplicationStateTests.cpp
test/src/ECS/: EntityTests.cpp  FeatureTests.cpp  MassAssignComponentsTests.cpp  RegistryTests.cpp  SystemTests.cpp
test/src/GUI/: ConfirmationWindowTests.cpp  ExpansionWindowTests.cpp  PlotAcquisitionMenuTests.cpp
test/src/Game/: ExpansionMarkerTests.cpp  LotDequeTests.cpp  LotTests.cpp  MarkerControllerTests.cpp  PlayfieldTests.cpp  PlotAcquisitionMarkerTests.cpp  PlotTests.cpp  TileTests.cpp
test/src/GameState/: DuelTests.cpp  FinalStateTests.cpp  GameControllerTests.cpp  GameStateTests.cpp  MainMenuTests.cpp  ModelTests.cpp
test/src/Input/: InputTests.cpp
test/src/Misc/: EnumMapTests.cpp  PtrViewTests.cpp  (+4 more)
(+247 files in other folders)
